<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".developer.DeveloperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--// bg image or btn -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/developer_bg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_overlay"
                android:scaleType="centerCrop"
                android:src="@drawable/alishna1" />

            <Button
                android:id="@+id/button_contact_us"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="52dp"
                android:background="@drawable/my_custom_btn_bg"
                android:text="@string/contactbtn"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="116dp"
                android:text="@string/compname"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!--        our team design card start-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@string/bold"
            android:text="@string/ourTeam"
            android:textColor="@color/btn_color1"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <!--        team member  Instructor1-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/namdeo21sir"
                    app:civ_border_color="@color/btn_color1"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sirname"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sirpost"
                    android:textColor="#0D0D91"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/sirline"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size01"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        team member first card 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/deepanshu"
                    app:civ_border_color="@color/btn_color1"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dname"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dpost"
                    android:textColor="#0D0D91"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/dline"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size01"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!--        team member first card 2-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/sudhir"
                    app:civ_border_color="@color/btn_color1"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sname"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/spost"
                    android:textColor="#0D0D91"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/sline"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size01"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--                team member first card 3-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/barde"
                    app:civ_border_color="@color/btn_color1"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ssname"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/sspost"
                    android:textColor="#0D0D91"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/dline"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_size01" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!--        our team Mission card start-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:fontFamily="@string/bold"
            android:text="@string/misitext"
            android:textColor="@color/btn_color1"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <!--        our mission -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/mtext"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_margin"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!--        our Address-->

        <!--        our team Addrees card card start-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@string/bold"
            android:text="@string/Address"
            android:textColor="@color/btn_color1"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <!--address card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="5dp"
                    android:text="@string/clg_address"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_margin"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--google map card  on clik -->
        <androidx.cardview.widget.CardView
            android:id="@+id/gmap_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/gmap"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/map" />

        </androidx.cardview.widget.CardView>


        <!--        &lt;!&ndash;        page footer&ndash;&gt;-->
        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="35dp"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:background="@drawable/bg_overlay"-->
        <!--            android:padding="8dp"-->
        <!--            android:text="@string/copytext"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textStyle="bold"-->

        <!--            />-->

    </LinearLayout>

</ScrollView>